objects/Copy_Covid_Case_Details__mdt.object
<CustomObject>
    <fields>
        <fullName>Copy_Every_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Every Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Only_Once__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Only Once</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Copy Covid Case Details</label>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Copy_Every_Time__c</columns>
        <columns>Copy_Only_Once__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All Data</label>
    </listViews>
    <pluralLabel>Copy Covid Case Details</pluralLabel>
</CustomObject>